--- a/Home/ProjektTab/ProjektsTabCSS.css
+++ b/Home/ProjektTab/ProjektsTabCSS.css
@@ -11,7 +11,7 @@ html,body{
     font-size: 0.5cm;
 }
 .slideshow-container {
-    max-width: 70%;
+    max-width: 60%;
     position: relative;
     margin: auto;
 }
@@ -66,11 +66,12 @@ html,body{
     top: 0;
 }
 .ueberschrift{
+    text-align: center;
     font-size: 2cm;
     font-weight: 700;
     color: white;
     position: relative;
-    margin-left: 100px;
+
 }
 
 /* The dots/bullets/indicators */
